docs/notebooks/tutorials/sources/both/RQA/test/mpi7.2176237.err
ERROR:2025-09-04 15:02:30,039:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:02:30,039:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:02:30,039:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:02:30,039:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:02:30,039:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:02:30,039:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:02:30,039:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:02:30,039:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:02:30,039:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:02:30,115:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:02:30,115:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:02:30,115:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:02:30,115:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:02:30,115:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:02:30,115:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:02:30,115:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:02:30,115:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
ERROR:2025-09-04 15:02:30,115:jax._src.xla_bridge:444: Jax plugin configuration error: Exception when calling jax_plugins.xla_cuda12.initialize()
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/xla_bridge.py", line 442, in discover_pjrt_plugins
    plugin_module.initialize()
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 324, in initialize
    _check_cuda_versions(raise_on_first_error=True)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax_plugins/xla_cuda12/__init__.py", line 281, in _check_cuda_versions
    local_device_count = cuda_versions.cuda_device_count()
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: jaxlib/cuda/versions_helpers.cc:113: operation cuInit(0) failed: Unknown CUDA error 303; cuGetErrorName failed. This probably means that JAX was unable to load the CUDA libraries.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 100).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 93).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
Traceback (most recent call last):
    return call(*args)
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
           ^^^^^^^^^^^
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    B_local = main()
    out = lax.add(x, y)
    B_local = main()
          ^^^^^^^^^^^^^
    B_local = main()
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 93).
--------------------
              ^^^^^^
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
    out = lax.add(x, y)
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 93).
--------------------
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
    return binary_op(*args)
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    B_local = main()
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
Traceback (most recent call last):
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    return call(*args)
              ^^^^^^
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    return call(*args)
Traceback (most recent call last):
    B_local = main()
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    out = lax.add(x, y)
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 93).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
    B_local = main()
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 93).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
          ^^^^^^^^^^^^^
                                     ^^^^^^^^^^^^^^^^^^
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
TypeError: add got incompatible shapes for broadcasting: (3, 21, 1681), (3, 121, 93).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
Traceback (most recent call last):
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    B_local = main()
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    return binary_op(*args)
    B_local = main()
              ^^^^^^
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    return binary_op(*args)
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
    return call(*args)
                                     ^^^^^^^^^^^^^^^^^^
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
    return call(*args)
    return binary_op(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
           ^^^^^^^^^^^^^^^^
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
    return call(*args)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
    out = lax.add(x, y)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
    out = lax.add(x, y)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 93).
--------------------
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 21, 1681), (3, 121, 93).
    B_local = main()
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
              ^^^^^^
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return binary_op(*args)
    out = lax.add(x, y)
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
    return call(*args)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 93).
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
--------------------
           ^^^^^^^^^^^
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    return call(*args)
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
    out = lax.add(x, y)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 93).
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
--------------------
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 93).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 93).
--------------------
    return binary_op(*args)
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 93).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 93).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 93).
    B_local = main()
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 20, 1681), (3, 121, 93).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
Traceback (most recent call last):
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 245, in <module>
    B_local = main()
              ^^^^^^
  File "/home/fcastro/DESC/docs/notebooks/tutorials/sources/both/RQA/test/mpi6.py", line 223, in main
    B_local, all_shapes, all_norms = bn_res_vec_mpi_2d(
                                     ^^^^^^^^^^^^^^^^^^
  File "/home/fcastro/DESC/desc/objectives/find_sour_mpi_xy.py", line 422, in bn_res_vec_mpi_2d
    B_local = B_sour0 + B_wire_cont + B_sticks0   # still (3, coords, N)
              ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/array_methods.py", line 583, in deferring_binary_op
    return binary_op(*args)
           ^^^^^^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufunc_api.py", line 182, in __call__
    return call(*args)
           ^^^^^^^^^^^
  File "/home/fcastro/.conda/envs/desc-ray/lib/python3.12/site-packages/jax/_src/numpy/ufuncs.py", line 1237, in add
    out = lax.add(x, y)
          ^^^^^^^^^^^^^
TypeError: add got incompatible shapes for broadcasting: (3, 21, 1681), (3, 121, 93).
--------------------
For simplicity, JAX has removed its internal frames from the traceback of the following exception. Set JAX_TRACEBACK_FILTERING=off to include these.
srun: error: stellar-i07n19: tasks 9-17: Exited with exit code 1
srun: Terminating StepId=2176237.0
slurmstepd: error: *** STEP 2176237.0 ON stellar-i07n7 CANCELLED AT 2025-09-04T15:03:00 ***
srun: error: stellar-i07n7: tasks 0-8: Exited with exit code 1
